fix(css): remove weird flicker on hover on small screens

--- a/versions/v2/components/Debugger/Signals/styles.css
+++ b/versions/v2/components/Debugger/Signals/styles.css
@@ -62,16 +62,7 @@
         max-width: 25vw;
     }
 
-    .list:hover {
-        min-width: inherit;
-        max-width: 80vw;
-    }
-
     button {
         font-size: 7px;
-    }
-
-    .list:hover button {
-        font-size: 11px;
     }
 }
